setup active/active meta data, configs and sample dashboard

--- a/ansible/templates/prometheus_conf.yaml.j2
+++ b/ansible/templates/prometheus_conf.yaml.j2
@@ -33,3 +33,12 @@ instances:
       - listener_acc_latency
       - listener_conns
       - listener_total_req
+      - bdb_crdt_syncer_egress_bytes
+      - bdb_crdt_syncer_egress_bytes_decompressed
+      - bdb_crdt_syncer_ingress_bytes
+      - bdb_crdt_syncer_ingress_bytes_decompressed
+      - bdb_crdt_syncer_local_ingress_lag_time
+      - bdb_crdt_syncer_pending_local_writes_max
+      - bdb_crdt_syncer_pending_local_writes_min
+      - bdb_crdt_syncer_status
+
